samples/_failures_safe/1761275694_33b50b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b906714f.c: In function ‘main’:
./samples/SAFE/__tmp_b906714f.c:165:9: error: expected declaration or statement at end of input
  165 |         double result = safe_power(numbers[i], exponent);
      |         ^~~~~~
./samples/SAFE/__tmp_b906714f.c:165:9: error: expected declaration or statement at end of input
